<resources>
    <string name="app_name">Listando</string>
    <string name="escolha_das_opcoes">Escolha das Opcoes</string>
    <string name="lista">Lista</string>
    <string name="falta_iniciar">Iniciar</string>
    <string name="fazendo">Fazendo</string>
    <string name="feito">Feito</string>
    <string name="visualizacao_das_coisas">Visualizacao das coisas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botao_de_adicionar">Botao de adicionar</string>
    <string name="title_activity_adicionar_tarefa">AdicionarTarefa</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="titulo_da_tarefa">Titulo da Tarefa</string>
    <string name="descricao_da_tarefa">Descricao da Tarefa</string>
    <string name="prioridade_baixa">Prioridade baixa</string>
    <string name="prioridade_media">Prioridade Media</string>
    <string name="prioridade_alta">Prioridade Alta</string>
    <string name="prioridade">Prioridade:</string>
    <string name="salvar_tarefa">Salvar Tarefa</string>
    <string name="botao_para_adicionar_tarefas">Botao para adicionar tarefas</string>
    <string name="tente_novamente">Verifique os campos e tente novamente.</string>
    <string name="adicione_titulo">Por favor, adicione um Titulo!</string>
    <string name="criado_com_sucesso">Tarefa Criada com Sucesso</string>
    <string name="nomeBanco">bd</string>
    <string name="sem_prioridade">Sem Prioridade</string>
    <string name="exemplo">Exemplo</string>
    <string name="texto_aleatorio">Eu sou um texto muito cabuloso para exemplificar essa bosta bostejadora hahaha!!!???</string>
    <string name="botao_de_apagar">Botao de apagar</string>
    <string name="nenhuma_tarefa">Nenhuma tarefa foi encontrada</string>
    <string name="inserar_novas_tarefas">Insira novas tarefas no botao \"mais\"</string>
    <string name="excluir_item">Excluir item</string>
    <string name="certeza_excluir">Você tem certeza de que deseja excluir este item?</string>
    <string name="sim">Sim</string>
    <string name="removido_sucesso">Removido com Sucesso</string>
    <string name="nao">Não</string>
    <string name="beleza">Beleza! :)</string>
</resources>