<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.atividades.AdicionarTarefa">

    <AutoCompleteTextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/titulo_da_tarefa"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <AutoCompleteTextView
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:hint="@string/descricao_da_tarefa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:paddingTop="18sp"
            android:text="@string/prioridade"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/grupoDeBotao"
            android:layout_marginTop="6sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">

            <RadioButton
                android:id="@+id/baixa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prioridade_baixa" />

            <RadioButton
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prioridade_media" />

            <RadioButton
                android:id="@+id/alta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prioridade_alta" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/salvar_tarefa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.069">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>