<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.atividades.Principal">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_das_coisas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/visualizacao_das_coisas"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        app:layout_constraintVertical_bias="0.0"></androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:contentDescription="@string/escolha_das_opcoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/falta_iniciar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fazendo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fazendo" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/feito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feito" />
    </com.google.android.material.tabs.TabLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>