<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCabuloso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tituloSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:paddingStart="40sp"
        android:text="@string/exemplo"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/descricaoSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40sp"
        android:paddingRight="40sp"
        android:text="@string/texto_aleatorio"
        android:justificationMode="inter_word"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloSet"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:orientation="horizontal"
        android:paddingTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricaoSet"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/prioridadeSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:paddingStart="40sp"
            android:text="@string/prioridade"
            android:textSize="25sp" />

        <ImageButton
            android:layout_width="50sp"
            android:layout_height="48sp"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/botao_de_apagar"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@color/design_default_color_primary_variant"
        android:src="?actionBarDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="2sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>